# InsightGraph

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
data/: research_jobs.db
docs/: API.md  API.zh-CN.md  BENCHMARKS.md  BENCHMARKS.zh-CN.md  FAQ.md  QUICK_START.md  README.md  README.zh-CN.md  architecture.md  architecture.zh-CN.md  configuration.md  configuration.zh-CN.md  demo-success-criteria.zh-CN.md  demo-troubleshooting.zh-CN.md  demo.md  deployment.md  deployment.zh-CN.md  glossary.md  nginx-insightgraph.conf  reference-parity-roadmap.md  report-quality-roadmap.md  research-job-repository-contract.md  research-jobs-api.md  research-jobs-api.zh-CN.md  roadmap-cn.md  roadmap.md  scripts.md  scripts.zh-CN.md  stable-server-demo-takeover-plan.zh-CN.md  v0.2.0-stable-demo-execution-plan.zh-CN.md
memory/: CLAUDE.md
reports/: ai-coding-agents-technical-review.md  ai-coding-tools-deep-analysis.md  deepseek-apple-analysis.md  xiaomi-corporation-analysis.md  xiaomi-duckduckgo-analysis.md  xiaomi-full-analysis.md  xiaomi-quick-analysis.md  xiaomi-serpapi-analysis.md
scripts/: append_eval_history.py  backup_demo_data.ps1  benchmark_live_research.py  benchmark_research.py  check_llm_provider.py  check_search_provider.py  dashboard_status.ps1  env_file.py  generate_xiaomi_serpapi.py  local_dashboard_server.py  restore_demo_data.ps1  run_research.py  run_with_llm_log.py  smoke_deployment.py  start_dashboard.ps1  stop_dashboard.ps1  summarize_eval_report.py  (+5 more)
(+318 files in other folders)
